fixed issue with overlapping the screen

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -58,6 +58,8 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .titleContainer {
@@ -68,12 +70,15 @@ header {
 .navContainer {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 /* Handmade Ceramics Section */
 
 .handmade {
-  padding: 38vh;
+  padding-top: 38vh;
+  padding-bottom: 38vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -115,9 +120,9 @@ p {
   width: 25%;
 }
 
-.a {
-  margin: 1vw;
-  width: 25%;
+.saleColourSlab {
+  width: 300px;
+  height: 300px;
   background-color: black;
 }
 
@@ -129,7 +134,8 @@ p {
 /* Home Decor Section */
 
 .homeDecor {
-  padding: 38vh;
+  padding-top: 38vh;
+  padding-bottom: 38vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -149,6 +155,12 @@ p {
   width: 100%;
 }
 
+.colourSlab {
+  width: 500px;
+  height: 250px;
+  background-color: black;
+}
+
 .about {
   color: #340034;
 }
@@ -160,7 +172,8 @@ p {
 /* Newsetter Section */
 
 .newsLetter {
-  padding: 38vh;
+  padding-top: 38vh;
+  padding-bottom: 38vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -207,7 +220,8 @@ form {
 
 .photo {
   text-align: center;
-  width: 25%;
+  width: 350px;
+  height: 350px;
   background-color: black;
 }
 
@@ -247,6 +261,7 @@ footer {
 
 .footerNav {
   text-decoration: underline;
+  padding-right: 150px;
 }
 
 .credit {
